# jd-link-converter

./: .gitignore  README.md  SKILL.md  jd_link_converter.py  pyproject.toml
references/: url_formats.md
tests/: test_converter.py
